# sync-mcp-cfg

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI_CLI_IMPLEMENTATION.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new_client_support.md
.github/workflows/: ci.yml  release.yml
docs/: gemini-cli-example.md  opencode-example.md
examples/: gemini-cli-config.json
src/sync_mcp_cfg/: __init__.py  version.py
src/sync_mcp_cfg/cli/: __init__.py  main.py
src/sync_mcp_cfg/cli/commands/: __init__.py  add.py  list.py  remove.py  sync.py
src/sync_mcp_cfg/clients/: __init__.py  base.py  claude_code.py  claude_desktop.py  cursor.py  gemini_cli.py  opencode.py  vscode.py
src/sync_mcp_cfg/core/: __init__.py  exceptions.py  models.py  registry.py
src/sync_mcp_cfg/tui/: app.py
tests/: conftest.py  test_client_handlers.py  test_gemini_cli_handler.py  test_models.py  test_opencode_handler.py
